--- a/index.html
+++ b/index.html
@@ -185,6 +185,6 @@
 </footer> 
 
 
-    <script src="../dist/js/script.min.js"></script>
+    <script src="./dist/js/script.min.js"></script>
 </body>
 </html>
