corrected offer page

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,600;1,100&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/d3231c159b.js" crossorigin="anonymous"></script>
 
-    <link rel="stylesheet" href="./dist/css/main.min.css">
+    <link rel="stylesheet" href="../dist/css/main.min.css">
 </head>
 <body>
     
@@ -32,7 +32,7 @@
                 <a class="nav__item" href="#home" id="first"><li>Home</li></a>
                 <a class="nav__item" href="#aboutus"><li> O nas</li></a>
                 <a class="nav__item" href="#offer"><li> Oferta</li></a>
-                <a class="nav__item" href="./page-contact.html" target="_blank"><li>Kontakt</li></a>
+                <a class="nav__item" href="../page-contact.html" target="_blank"><li>Kontakt</li></a>
                 
             </ul>
         </div>
@@ -53,8 +53,8 @@
         <h2 class="white-section section">O NAS</h2>
         <div class="aboutus__wrapper">
 
-            <img class="aboutus__mobile section" src="./dist/img/waters-small.jpg" alt="jezioro w parku">
-            <img class="aboutus__desktop" src="./dist/img/waters-big.jpg" alt="jezioro w parku">
+            <img class="aboutus__mobile section" src="../src/img/waters-small.jpg" alt="jezioro w parku">
+            <img class="aboutus__desktop" src="../src/img/waters-big.jpg" alt="jezioro w parku">
             <div class="aboutus__container white-section section">
                 <h3 class="aboutus__title">Niezapomniane przygody</h3>
                 <p class="aboutus__text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Asperiores aliquid
@@ -136,7 +136,7 @@
 
         </div>
 
-        <a href="./page-offer.html" target="_blank">
+        <a href="../page-offer.html" target="_blank">
             <p>Więcej ofert...</p>
         </a>
     </section>
@@ -185,6 +185,6 @@
 </footer> 
 
 
-    <script src="./dist/js/script.min.js"></script>
+    <script src="../dist/js/script.min.js"></script>
 </body>
 </html>
