--- a/page-contact.html
+++ b/page-contact.html
@@ -13,7 +13,7 @@
         rel="stylesheet">
     <script src="https://kit.fontawesome.com/d3231c159b.js" crossorigin="anonymous"></script>
 
-    <link rel="stylesheet" href="./dist/css/main.min.css">
+    <link rel="stylesheet" href="../dist/css/main.min.css">
 </head>
 
 <body>
@@ -28,16 +28,16 @@
                 <ul>
                     <p><i class="fas fa-tree"></i>Forest</p>
 
-                    <a href="./index.html" id="first"  >
+                    <a href="../index.html" id="first"  >
                         <li>Home</li>
                     </a>
                     <a href="#aboutus">
                         <li> O nas</li>
                     </a>
-                    <a href="./index.html">
+                    <a href="../index.html">
                         <li> Oferta</li>
                     </a>
-                    <a href="./page-contact.html" target="_blank">
+                    <a href="../page-contact.html" target="_blank">
                         <li>Kontakt</li>
                     </a>
 
@@ -51,9 +51,9 @@
             <h2 class="form__title">KONTAKT</h2>
         </div>
         <div class="form__box">
-            <div class="form__map-text">
+            <div class="form__box-map">
                 <p class="form__box-heading">Znajdź nas na <span>Google Maps</span>!</p>
-                <img class="form__box-img" src="./dist/img/googlemaps2.png" alt="mapa">
+                <img class="form__box-img" id="map-icon" src="../src/img/google-moja-firma.png" alt="mapa">
             </div>
             <div class="form__contact-data">
                 <div id="map"></div>
@@ -136,7 +136,7 @@
 
 
 </footer>
-    <script src="./dist/js/script.min.js"></script>
+    <script src="../dist/js/script.min.js"></script>
     <script
         src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCLwH_b4wPSevvEBCvoXCxlyHjMSsn03KA&callback=initMap&libraries=&v=weekly"
         async></script>
