--- a/page-offer.html
+++ b/page-offer.html
@@ -13,7 +13,7 @@
         rel="stylesheet">
     <script src="https://kit.fontawesome.com/d3231c159b.js" crossorigin="anonymous"></script>
 
-    <link rel="stylesheet" href="./dist/css/main.min.css">
+    <link rel="stylesheet" href="../dist/css/main.min.css">
 </head>
 
 <body>
@@ -28,16 +28,16 @@
                 <ul>
                     <p><i class="fas fa-tree"></i>Forest</p>
 
-                    <a href="./index.html" id="first"  >
+                    <a href="../index.html" id="first"  >
                         <li>Home</li>
                     </a>
                     <a href="#aboutus">
                         <li> O nas</li>
                     </a>
-                    <a href="./index.html">
+                    <a href="../index.html">
                         <li> Oferta</li>
                     </a>
-                    <a href="./page-contact.html" target="_blank">
+                    <a href="../page-contact.html" target="_blank">
                         <li>Kontakt</li>
                     </a>
 
@@ -145,7 +145,7 @@
 
 
 </footer>
-        <script src="./dist/js/script.min.js"></script>
+        <script src="../dist/js/script.min.js"></script>
 </body>
 
 </html>
