correct burger btn

--- a/page-offer.html
+++ b/page-offer.html
@@ -18,17 +18,17 @@
 
 <body>
     <button class="nav__btn nav-form__btn">
-   <i class="fa-solid fa-bars"></i>
-</button>
-<nav class="nav nav-form">
-  
+        <i class="fa-solid fa-bars"></i>
+    </button>
+    <nav class="nav nav-form">
+
         <div class="nav__items nav-form__items">
 
             <div class="nav__links nav-form__links">
                 <ul>
                     <p><i class="fas fa-tree"></i>Forest</p>
 
-                    <a href="./index.html" id="first"  >
+                    <a href="./index.html" id="first">
                         <li>Home</li>
                     </a>
                     <a href="#aboutus">
@@ -44,7 +44,7 @@
                 </ul>
             </div>
         </div>
-</nav>
+    </nav>
 
     <section class="offer more-offer" id="offer">
 
@@ -104,48 +104,49 @@
 
 
         </div>
-        <footer class="footer">
+    </section>
+    <footer class="footer">
 
-    <div class="footer__container">
-        <p class="footer__name"><i class="fas fa-tree"></i>Forest</p>
+        <div class="footer__container">
+            <p class="footer__name"><i class="fas fa-tree"></i>Forest</p>
 
 
-        <div class="footer__cards">
-            <div class="footer__card">
+            <div class="footer__cards">
+                <div class="footer__card">
 
-                <p class="footer__heading">O nas</p>
-                <p class="footer__text">Historia</p>
-                <p class="footer__text">Parki</p>
-                <p class="footer__text">Opinie</p>
+                    <p class="footer__heading">O nas</p>
+                    <p class="footer__text">Historia</p>
+                    <p class="footer__text">Parki</p>
+                    <p class="footer__text">Opinie</p>
+
+                </div>
+
+                <div class="footer__card">
+                    <p class="footer__heading">Nasza firma</p>
+                    <p class="footer__text">Praca</p>
+                    <p class="footer__text">Kadry</p>
+                    <p class="footer__text">Zarząd</p>
+                </div>
+
+                <div class="footer__card">
+                    <p class="footer__heading">Dokumenty</p>
+                    <p class="footer__text">Wnioski</p>
+                    <p class="footer__text">Rezerwacje</p>
+                </div>
+
 
             </div>
-
-            <div class="footer__card">
-                <p class="footer__heading">Nasza firma</p>
-                <p class="footer__text">Praca</p>
-                <p class="footer__text">Kadry</p>
-                <p class="footer__text">Zarząd</p>
-            </div>
-
-            <div class="footer__card">
-                <p class="footer__heading">Dokumenty</p>
-                <p class="footer__text">Wnioski</p>
-                <p class="footer__text">Rezerwacje</p>
-            </div>
-
 
         </div>
 
-    </div>
 
-
-    <hr>
-    <p class="footer__company">&copy; 2022 Forest Group Company Ltd. </p>
+        <hr>
+        <p class="footer__company">&copy; 2022 Forest Group Company Ltd. </p>
 
 
 
-</footer>
-        <script src="./dist/js/script.min.js"></script>
+    </footer>
+    <script src="./dist/js/script.min.js"></script>
 </body>
 
 </html>
