--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@
                 <p class="offer__price">$0</p>
 
                 <div class="offer__items">
-                    <p class="offer__options"> <i class="fa-solid fa-check"></i>opcja w pakiecie</p>
-                    <p class="offer__options"><i class="fa-solid fa-check"></i>opcja w pakiecie</p>
+                    <p class="offer__options offer__check"> <i class="fa-solid fa-check"></i>opcja w pakiecie</p>
+                    <p class="offer__options offer__check"><i class="fa-solid fa-check"></i>opcja w pakiecie</p>
                     <p class="offer__options offer__options--highlighted"><i class="fa-solid fa-minus"></i>opcja poza
                         pakietem</p>
                     <p class="offer__options offer__options--highlighted"><i class="fa-solid fa-minus"></i>opcja poza
@@ -103,11 +103,11 @@
                 <p class="offer__title">Standard</p>
                 <p class="offer__price">$99</p>
                 <div class="offer__items">
-                    <p class="offer__options"> <i class="fa-solid fa-check"></i>opcja w pakiecie</p>
+                    <p class="offer__options offer__check"> <i class="fa-solid fa-check"></i>opcja w pakiecie</p>
 
-                    <p class="offer__options"> <i class="fa-solid fa-check"></i>opcja w pakiecie</p>
+                    <p class="offer__options offer__check"> <i class="fa-solid fa-check"></i>opcja w pakiecie</p>
 
-                    <p class="offer__options"> <i class="fa-solid fa-check"></i>opcja w pakiecie</p>
+                    <p class="offer__options offer__check"> <i class="fa-solid fa-check"></i>opcja w pakiecie</p>
                     <p class="offer__options offer__options--highlighted"><i class="fa-solid fa-minus"></i>opcja poza
                         pakietem </p>
                     <p class="offer__options offer__options--highlighted"><i class="fa-solid fa-minus"></i>opcja poza
