--- a/offer.html
+++ b/offer.html
@@ -31,13 +31,13 @@
                     <a href="./index.html" id="first"  >
                         <li>Home</li>
                     </a>
-                    <a href="#aboutus">
+                    <a href="./index.html">
                         <li> O nas</li>
                     </a>
                     <a href="./index.html">
                         <li> Oferta</li>
                     </a>
-                    <a href="./page-contact.html" target="_blank">
+                    <a href="./contact.html" target="_blank">
                         <li>Kontakt</li>
                     </a>
 
