corrected h2 in contact page

--- a/contact.html
+++ b/contact.html
@@ -47,9 +47,12 @@
 </nav>
 
     <section class="form" id="contact">
-        <div class="form__hero-img">
-            <h2 class="form__title">KONTAKT</h2>
+
+    <div class="form__hero-img">
+        <h2 class="form__title">KONTAKT</h2>
+        <div class="form__hero-shadow">
         </div>
+    </div>
         <div class="form__box">
             <div class="form__box-map">
                 <p class="form__box-heading">Znajdź nas na <span>Google Maps</span>!</p>
